--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-Hello World
+# #whoami
+:octocat: My name is Tales (pls no H in my name) Casagrande a.k.a taleco 
+
+[![Linkedin Badge](https://img.shields.io/badge/-LinkedIn-blue?style=flat-square&logo=Linkedin&logoColor=white&link=https://www.linkedin.com/in/talescasagrande/)]( https://www.linkedin.com/in/talescasagrande/)
